--- a/machine_learning/.gitignore
+++ b/machine_learning/.gitignore
@@ -1,6 +1,7 @@
 temporary/
 data/stage_1/
 data/stage_2/
+processed_csv_files/testing/
 processed_csv_files/training/ap_side_procedures/
 processed_csv_files/training/beacon_loss/
 processed_csv_files/training/connection_establishment/
