Browser Automation using selenium working!

--- a/src/.gitignore
+++ b/src/.gitignore
@@ -1,2 +1,5 @@
 # ignore all the environment configuration files in data_collection directory
 data_collection/**/env.py
+
+# ignore all log files
+**/*.log
