--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,12 @@
 cycler==0.10.0
-dotenvy==0.2.0
-future==0.16.0
-matplotlib==2.1.2
-numpy==1.14.0
-pandas==0.22.0
-pyparsing==2.2.0
-python-dateutil==2.6.1
-pytz==2017.3
-scikit-learn==0.19.1
-scipy==1.0.0
+kiwisolver==1.0.1
+matplotlib==3.0.0
+numpy==1.15.2
+pandas==0.23.4
+pyparsing==2.2.2
+python-dateutil==2.7.3
+pytz==2018.5
+scikit-learn==0.20.0
+scipy==1.1.0
 six==1.11.0
 sklearn==0.0
